# ros_basics

./: CMakeLists.txt  README.md  package.xml
launch/: camera_ball.launch  face.launch  robot_cleaner.launch
src/Introduction/add_two_ints/: add_two_ints_client.py  add_two_ints_server.py
src/Introduction/iot_sensor/: iot_sensor_publisher.py  iot_sensor_subscriber.py
src/Introduction/talker-listener/: listener.py
src/assignment/: turtlesim_move.py  turtlesim_pose.py
src/motion/: robot_cleaner.py
src/perception/: camera_ball.py  color_filtering.py  contours_detection.py  image_encoding.py  image_pub_sub.py  image_structure.py  image_thresholding.py  open_copy.py  read_video.py
src/perception/Faces/: face.py
src/talker-listener/: talker.py
